--- a/Analyzebottlenecks/index.html
+++ b/Analyzebottlenecks/index.html
@@ -146,10 +146,11 @@ body, html {
 outline a series of steps to lead you to a concrete solution that you can implement to restore the server to an
 acceptable performance level.<p>
 <p><b>Below the topics will be covered:<b></p>
-<p>- CPU bottlenecks
-<br>- Memory bottlenecks
-<br>- Disk bottelnecks
-<br>- Network bottlenecks <p>
+<li><a href="https://linuxhero.tk/cpubottlenecks/">CPU Bottlenecks</a></li>
+<li><a href="https://linuxhero.tk/memorybottlenecks/"></a>Memory Bottlenecks</li>
+<li><a href="https://linuxhero.tk/diskbottlenecks/"></a>Disk Bottlenecks</li>
+<li><a href="https://linuxhero.tk/networkbottlenecsk/"></a>Network bottlenecks</li>
+
 <br>
 <p><b>The following steps are used as our quick tuning strategy:<b></p>
 <p>1. Know your system.
