--- a/Analyzebottlenecks/index.html
+++ b/Analyzebottlenecks/index.html
@@ -145,11 +145,11 @@ body, html {
     <p> We will explain how to find a performance problem that might be affecting one of your servers. We
 outline a series of steps to lead you to a concrete solution that you can implement to restore the server to an
 acceptable performance level.<p>
-<p><b>Below the topics will be covered:<b></p>
+<p><b>Below the topics will be covered:-<b></p>
 <li><a href="https://linuxhero.tk/cpubottlenecks/">CPU Bottlenecks</a></li>
-<li><a href="https://linuxhero.tk/memorybottlenecks/"></a>Memory Bottlenecks</li>
-<li><a href="https://linuxhero.tk/diskbottlenecks/"></a>Disk Bottlenecks</li>
-<li><a href="https://linuxhero.tk/networkbottlenecsk/"></a>Network bottlenecks</li>
+<li><a href="https://linuxhero.tk/memorybottlenecks/">Memory Bottlenecks</a></li>
+<li><a href="https://linuxhero.tk/diskbottlenecks/">Disk Bottlenecks</a></li>
+<li><a href="https://linuxhero.tk/networkbottlenecsk/">Network bottlenecks</a></li>
 
 <br>
 <p><b>The following steps are used as our quick tuning strategy:<b></p>
