--- a/devopsinfo/index.html
+++ b/devopsinfo/index.html
@@ -91,7 +91,7 @@ body, html {
        <i class="fa fa-caret-down"></i>
      </button>
      <div class="dropdown-content">
-      <a href="http://linuxhero.tk/webapp/">What is devops?</a>
+      <a href="http://linuxhero.tk/devopsinfo/">What is devops?</a>
       <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
       <a href="#">Link 3</a>
      </div>
@@ -135,13 +135,13 @@ body, html {
 <div class="w3-container">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">What is Devops?</span></h5>
-    <p> The word “DevOps” was coined in 2009 by Patrick Debois, who became one of its gurus. The term was formed by combining “development” and “operations,” which provides a starting point for understanding exactly what people typically mean when they say “DevOps.” Notably, DevOps isn’t a process or a technology or a standard. Many devotees refer to DevOps as a “culture”—a viewpoint that New Relic favors. We also use the term “DevOps movement” when talking about topics such as adoption rates and trends for the future, and “DevOps environment” to refer to an IT organization that has adopted a DevOps culture.<p>
+    <p><i> The word “DevOps” was coined in 2009 by Patrick Debois, who became one of its gurus. The term was formed by combining “development” and “operations,” which provides a starting point for understanding exactly what people typically mean when they say “DevOps.” Notably, DevOps isn’t a process or a technology or a standard. Many devotees refer to DevOps as a “culture”—a viewpoint that New Relic favors. We also use the term “DevOps movement” when talking about topics such as adoption rates and trends for the future, and “DevOps environment” to refer to an IT organization that has adopted a DevOps culture.<i><p>
     <br>
-    <p>This primer will have a great deal more to say about DevOps, but to get started, we need a serviceable definition. We like this one from "Gartner":<p>
+    <p><i>This primer will have a great deal more to say about DevOps, but to get started, we need a serviceable definition. We like this one from "Gartner":<i><p>
     <marquee behavior="scroll" bgcolor="#d9d9ff" direction="left">"DevOps represents a change in IT culture, focusing on rapid IT service delivery through the adoption of agile, lean practices in the context of a system-oriented approach. DevOps emphasizes people (and culture), and seeks to improve collaboration between operations and development teams. DevOps implementations utilize technology— especially automation tools that can leverage an increasingly programmable and dynamic infrastructure from a life cycle perspective.". ~ Linus Torvalds</marquee>
    
  
-   <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">What are DevOps principles</span></h5>
+   <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">What are DevOps principles?</span></h5>
    
 <p><i>In short, the main principles of DevOps are automation, continuous delivery, and fast reaction to feedback. <br>You can find a more detailed explanation of DevOps pillars in the CAMS acronym:
 <br>
