--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@ body, html {
        <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="https://linuxhero.tk/webapp/">What is devops?</a>
-      <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
+      <a href="https://linuxhero.tk/devopsinfo/">What is Devops?</a>
+      <a href="https://linuxhero.tk/devopstools/">Devops Tools</a>
       <a href="#">Link 3</a>
     </div>
   </div>
