--- a/devopstools/index.html
+++ b/devopstools/index.html
@@ -161,6 +161,10 @@ body, html {
 <p><i>It is an instrument that helps with packaging code into self-contained units, i.e. containers.<i><p>
 <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">6. Nagios</span></h5>
 <p><i>It is an infrastructure monitoring tool that presents analytics in visual reports.<i><p>
+  
+  <br>
+  <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">What devops engineer do?</span></h5>
+  <p><i>A DevOps engineer is an IT professional who works with software developers, system operators (SysOps) and other production IT staff to oversee code releases and deployments. The role calls for someone who has relevant hard and soft skills to overcome the traditional barriers between software development, QA, testing and IT operations teams and foster a collaborative, holistic environment.<i><p>
   </div>
 </div>
 
