--- a/devopstools/index.html
+++ b/devopstools/index.html
@@ -165,6 +165,8 @@ body, html {
   <br>
   <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">What devops engineer do?</span></h5>
   <p><i>A DevOps engineer is an IT professional who works with software developers, system operators (SysOps) and other production IT staff to oversee code releases and deployments. The role calls for someone who has relevant hard and soft skills to overcome the traditional barriers between software development, QA, testing and IT operations teams and foster a collaborative, holistic environment.<i><p>
+  
+  <marquee behavior="scroll" bgcolor="#d9d9ff" direction="left">“Currently, DevOps is more like a philosophical movement, not yet a precise collection of practices, descriptive or prescriptive.” ~ Gene Kim </marquee>  
   </div>
 </div>
 
