--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ body, html {
     <div class="dropdown-content">
       <a href="https://linuxhero.tk/devopsinfo/">What is Devops?</a>
       <a href="https://linuxhero.tk/devopstools/">Devops Tools</a>
-
+      <a href="https://linuxhero.tk/jenkins/">Configure Jenkins</a>
     </div>
   </div>
   <div class="dropdown">
