--- a/jenkins/index.html
+++ b/jenkins/index.html
@@ -140,6 +140,8 @@ body, html {
   <div class="w3-content" style="max-width:1000px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-black">	
 Jenkins</span></h5>
+
+  <p><i>Jenkins is an open source automation tool written in Java with plugins built for Continuous Integration purpose. Jenkins is used to build and test your software projects continuously making it easier for developers to integrate changes to the project, and making it easier for users to obtain a fresh build. It also allows you to continuously deliver your software by integrating with a large number of testing and deployment technologies.<i><p>
   <p><i>If there is one tool that the vast majority of DevOps teams have
 deployed, it is Jenkins. There are other tools, but Jenkins is the
 “Got DevOps?” standard. If Jenkins has a problem, it is one of
