--- a/docker/index.html
+++ b/docker/index.html
@@ -195,7 +195,7 @@ that can change quickly.<i><p>
 <br>[root@server ~]# systemctl enable docker
 </span></h5> 
 <br>
-<h5><span class="w3-code w3-red">Now, You are ready to use jenkins!</span></h5> 
+<h5><span class="w3-code w3-red">Now, You are ready to use docker!</span></h5> 
 
 
 <!-- Contact/Area Container -->
