--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@ body, html {
       <a href="https://linuxhero.tk/devopstools/">Devops Tools</a>
       <a href="https://linuxhero.tk/jenkins/">Configure Jenkins</a>
       <a href="https://linuxhero.tk/docker/">Configure Docker</a>
+      <a href="https://linuxhero.tk/kubernetes/">Configure Kubernets</a>
     </div>
   </div>
   <div class="dropdown">
