--- a/kubernetes/index.html
+++ b/kubernetes/index.html
@@ -360,8 +360,11 @@ Kubernetes</span></h5>
 </div>
 
 <!-- Footer -->
-<footer class="w3-center w3-light-grey w3-padding-48 w3-large">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+<footer class="w3-center w3-light-black w3-padding-48 w3-large">
+  <div class="list-group">
+     <a class="fa fa-linkedin-square" style="font-size:48px;color:white" href="https://www.linkedin.com/login"></a>
+    </div>
+   </body>
 </footer>
 
 <script>
@@ -381,5 +384,7 @@ function openMenu(evt, menuName) {
 }
 document.getElementById("myLink").click();
 </script>
+  </script>
+  <script async type="text/javascript" src="https://userlike-cdn-widgets.s3-eu-west-1.amazonaws.com/d73a0ca9d9021011823acd38988ac62dbf6728e50c7d390a5bdaa97fbca53a7d.js"></script>
 </body>
 </html>
