--- a/kubernetes/index.html
+++ b/kubernetes/index.html
@@ -361,6 +361,7 @@ Kubernetes</span></h5>
 
 <!-- Footer -->
 <footer class="w3-center w3-light-black w3-padding-48 w3-large">
+  <body>
   <div class="list-group">
      <a class="fa fa-linkedin-square" style="font-size:48px;color:white" href="https://www.linkedin.com/login"></a>
     </div>
