--- a/kubernetes/index.html
+++ b/kubernetes/index.html
@@ -333,6 +333,8 @@ Kubernetes</span></h5>
 <br>
   
 <h5><span class="w3-code w3-red">Now, You are ready to use kubernetes!</span></h5> 
+</div>
+</div>
 
 
 <!-- Contact/Area Container -->
@@ -360,12 +362,14 @@ Kubernetes</span></h5>
 </div>
 
 <!-- Footer -->
-<footer class="w3-center w3-light-black w3-padding-48 w3-large">
-  <body>
-  <div class="list-group">
+<footer class="w3-center w3-black w3-padding-48 w3-large">
+  
+<body>
+   <div class="list-group">
      <a class="fa fa-linkedin-square" style="font-size:48px;color:white" href="https://www.linkedin.com/login"></a>
     </div>
    </body>
+  
 </footer>
 
 <script>
