--- a/kubernetes/index.html
+++ b/kubernetes/index.html
@@ -75,7 +75,7 @@ body, html {
 <body>
 
 <div class="navbar">
-  <a href="http://linuxhero.tk/#home">Home</a>
+  <a href="https://linuxhero.tk/#home">Home</a>
    <div class="dropdown">
      <button class="dropbtn">Linux 
         <i class="fa fa-caret-down"></i>
