--- a/kubernetes/index.html
+++ b/kubernetes/index.html
@@ -98,9 +98,11 @@ body, html {
        <i class="fa fa-caret-down"></i>
      </button>
      <div class="dropdown-content">
-      <a href="http://linuxhero.tk/webapp/">What is devops?</a>
-      <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
-      <a href="#">Link 3</a>
+      <a href="https://linuxhero.tk/Analyzebottlenecks/">Steps To Analyze Linux Performance Bottlenecks</a>
+      <a href="https://linuxhero.tk/cpubottlenecks/">CPU Bottlenecks</a>
+        <a href="https://linuxhero.tk/memorybottlenecks/">Memory Bottlenecks</a>
+       <a href="https://linuxhero.tk/diskbottlenecks/">Disk Bottlenecks</a>
+       <a href="https://linuxhero.tk/networkbottlenecsk/">Network Bottlenecks</a>
      </div>
     </div>
    <div class="dropdown">
@@ -108,9 +110,11 @@ body, html {
        <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="http://linuxhero.tk/webapp/">What is devops?</a>
-      <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
-      <a href="#">Link 3</a>
+   <a href="https://linuxhero.tk/devopsinfo/">What is Devops?</a>
+      <a href="https://linuxhero.tk/devopstools/">Devops Tools</a>
+      <a href="https://linuxhero.tk/jenkins/">Configure Jenkins</a>
+      <a href="https://linuxhero.tk/docker/">Configure Docker</a>
+      <a href="https://linuxhero.tk/kubernetes/">Configure Kubernetes</a>
     </div>
   </div>
   <div class="dropdown">
