--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ body, html {
     <img src="/me.jpg" style="width:50%;max-width:1000px" class="w3-margin-top">
       <body>
    <div class="list-group">
-     <a class="fa fa-linkedin-square" style="font-size:48px;color:blue" href="https://www.facebook.com"></a>
+     <a class="fa fa-linkedin-square" style="font-size:48px;color:blue" href="https://www.linkedin.com/login"></a>
     </div>
      </body>
     <p>Over 6+ years Experienced in Linux with a demonstrated history of working in the information technology and services industry. Responsible for maintaining the health, integrity, availability, and security of all the Linux os systems globally. Apply appropriate problem solving techniques to solve complex production problems and assist with the root cause analysis. Work in a team environment to deploy solution with my knowledge.</p>
