--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ body, html {
     <img src="/me.jpg" style="width:50%;max-width:1000px" class="w3-margin-top">
       <body>
    <div class="list-group">
-     <a class="fa fa-linkedin-square" style="font-size:48px;color:blue" href="https://www.linkedin.com/login"></a>
+     <a class="fa fa-linkedin-square" style="font-size:48px;color:blue" href="https://www.facebook.com"></a>
     </div>
      </body>
     <p>Over 6+ years Experienced in Linux with a demonstrated history of working in the information technology and services industry. Responsible for maintaining the health, integrity, availability, and security of all the Linux os systems globally. Apply appropriate problem solving techniques to solve complex production problems and assist with the root cause analysis. Work in a team environment to deploy solution with my knowledge.</p>
@@ -184,19 +184,19 @@ body, html {
 <!-- Contact/Area Container -->
  
 <div class="w3-container" id="contact">
-    <h2>Please email me if you face any issue.</h2>
+    <h5><span class="w3-code w3-black">Please email me if you face any issue.</span></h5>
     <form action="mailto:Mdsulemanroayl23@gmail.com" method="get" enctype="text/plain">
       <p><strong>Name: <input type="text" name="name"/></p>
       <p><strong>Email: <input type="text" name="email"/></p>
       <p><strong>Comments:
         <br />
-        <textarea name="comments" rows = "12" cols = "35">Send your comments to owner.</textarea>
+        <textarea name="comments" rows = "12" cols = "35">Send your comments....</textarea>
         <br>
-      <p><input type="submit" name="submit" value="Send" />
+     <h5><span class="w3-code w3-green"><input type="submit" name="submit" value="Send" />
         <form action="mailto:Allishah2490@gmail.com" 
          enctype="text/plain" onsubmit="location.href='thanks.html';" >
         <input type="reset" name="reset" value="Clear Form" />
-      </p>
+      </span></h5>
     </form>
   </body>
   </div>
