--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@ body, html {
       <a href="https://linuxhero.tk/jenkins/">Configure Jenkins</a>
       <a href="https://linuxhero.tk/docker/">Configure Docker</a>
       <a href="https://linuxhero.tk/kubernetes/">Configure Kubernetes</a>
+      <a href="https://linuxhero.tk/puppet/">Configure Puppet</a>
+      
     </div>
   </div>
   <div class="dropdown">
