--- a/kubernetes/index.html
+++ b/kubernetes/index.html
@@ -151,10 +151,14 @@ Kubernetes</span></h5>
 <br>2. Nodes - Where pods get scheduled
 <br>3. Pods - Holds containers<i><p>
 <p><i>Kubernetes and Docker are both comprehensive de-facto solutions to intelligently manage containerized applications and provide powerful capabilities, and from this some confusion has emerged. “Kubernetes” is now sometimes used as a shorthand for an entire container environment based on Kubernetes. In reality, they are not directly comparable, have different roots, and solve for different things.<i><p>
+<br>
+  <h5 <span class="w3-tag w3-red">[Master Node] |192.0.0.20 ---------------- 192.0.0.30|  [Worker Node] <br>master-node  <--------------------->  worker-node</span></h5>
 
-<h5><span class="w3-code w3-red">Install and Configure Kubernetes:-
+<h5><span class="w3-code w3-red">Lets start to setup Kubernetes Cluster:-
+ </span></h5> 
+  <br>
+  <h5><span class="w3-code w3-red">Configure Master Node:-
  </span></h5>
- <br>
 <h5><span class="w3-code w3-red"> Step:1 Update Hostname
 </span></h5>
 
