--- a/ansible/index.html
+++ b/ansible/index.html
@@ -181,7 +181,7 @@ popular tools in that area.<i><p>
     <h5><span class="w3-code w3-red">Step:3 Setup keys based SSH authentication
     </span></h5>
      <h5><span class="w3-code w3-black">[root@server ~]#  ssh-keygen
-     #Use ssh-copy-id command to copy public key of Ansible server to its nodes.
+     <br>#Use ssh-copy-id command to copy public key of Ansible server to its nodes.
    </span></h5>
     <br>
     
