--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ body, html {
       <a href="https://linuxhero.tk/docker/">Configure Docker</a>
       <a href="https://linuxhero.tk/kubernetes/">Configure Kubernetes</a>
       <a href="https://linuxhero.tk/puppet/">Configure Puppet</a>
-      
+      <a href="https://linuxhero.tk/ansible/">Configure Ansible</a>
     </div>
   </div>
   <div class="dropdown">
