--- a/ansible/index.html
+++ b/ansible/index.html
@@ -161,7 +161,11 @@ automation tools are also capable of providing either a
 complete CI, CD and ARA pipeline or integrations with
 popular tools in that area.<i><p>
 
-
+  <h5><span class="w3-code w3-red">Below is the enviorment, We will setup for ansible
+ </span></h5>
+  
+  <h5 <span class="w3-tag w3-red">[Asible Server] |192.0.0.20 ---------------- [Ansible Nodes] 192.0.0.30, 192.0.0.40</span></h5>
+<br>
 <h5><span class="w3-code w3-red">Lets start to setup Ansible:-
  </span></h5>
  <br>
