--- a/kubernetescommmand/index.html
+++ b/kubernetescommmand/index.html
@@ -257,6 +257,12 @@ body, html {
 <br>$ kubectl get nodes --show-labels
 <br>$ kubectl get events
 </span></h5>
+    
+    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">14. Role Based Access Control</span></h5>
+<h5><span class="w3-code w3-red">$ kubectl create role fluent-reader --verb=get --verb=list --verb=watch --resource=pods
+<br>$ kubectl create rolebinding foo --role=fluent-reader --user=minikube
+<br>$ kubectl get rolebinding foo -o yaml
+</span></h5>
 
 
 </div>
