--- a/kubernetescommmand/index.html
+++ b/kubernetescommmand/index.html
@@ -128,7 +128,7 @@ body, html {
 <div class="w3-sand w3-grayscale w3-large">
   <div class="w3-container">
   <div class="w3-content" style="max-width:700px">
-   <img src="/Docker-cheat-sheet.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
+   <img src="/kubernetes.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
   </div>
      
 <!-- Content -->
