--- a/kubernetescommmand/index.html
+++ b/kubernetescommmand/index.html
@@ -181,14 +181,14 @@ $ kubectl scale deployment/POD_NAME --replicas=N
 <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">6. Volumes</span></h5>
 
 
-<h5><span class="w3-code w3-red">List Persistent Volumes and Persistent Volumes Claims::
+<h5><span class="w3-code w3-red">List Persistent Volumes and Persistent Volumes Claims:
 <br>$ kubectl get pv
 <br>$ kubectl get pvc
 </span></h5>
 
 <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">6. Secrets</span></h5>
 
-<h5><span class="w3-code w3-red">List Persistent Volumes and Persistent Volumes Claims::
+<h5><span class="w3-code w3-red">List Persistent Volumes and Persistent Volumes Claims:
 <br>$ kubectl get secrets
 <br>$ kubectl create secret generic --help
 <br>$ kubectl create secret generic mysql --from-literal=password=root
