--- a/splunk/index.html
+++ b/splunk/index.html
@@ -177,20 +177,20 @@ Splunk</span></h5>
    </span></h5>  
 <br>
 
-<h5><span class="w3-code w3-black">Start the Splunk Service
+<h5><span class="w3-code w3-red">Start the Splunk Service
  </span></h5>
 <br>
  
     <h5><span class="w3-code w3-black">[root@server ~]# systemctl start splunk</span></h5>  
 
-
+<br>
 <h5><span class="w3-code w3-red"> Now, Open web browser to access splunk web interface. We have to open firewall port 8000.
 <br>
-<br>http://server_ip:8000</span></h5><br>
-<br>Tpye UserName and Password to login splunk web interface.
+<br>http://server_ip:8000
+<br>Type UserName and Password to login splunk web interface.
 <br>Once logged in you will see Splunk Dashboard.
     </span></h5>  
-    
+    <br>
    
            <h5><span class="w3-code w3-red">Now, You are ready to use Splunk! <span></h5>
            
