--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ body, html {
     </button>
     <div class="dropdown-content">
       <a href="https://linuxhero.tk/nagios/">Configure Nagios</a>
-      <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
+      <a href="https://linuxhero.tk/splunk/"">Configure Splunk</a>
       <a href="#">Link 3</a>
     </div>
   </div>
