--- a/splunk/index.html
+++ b/splunk/index.html
@@ -136,6 +136,7 @@ body, html {
      <img src="/programming.gif" alt="Computer man" style="width:100px;height:100px;">
 <!-- Content -->
 <div style="max-width:1200px">
+  <embed src=".pdf" type="application/pdf"   height="700px" width="500">
 
   <div class="w3-content" style="max-width:1000px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-black">	
