--- a/splunk/index.html
+++ b/splunk/index.html
@@ -136,9 +136,13 @@ body, html {
      <img src="/programming.gif" alt="Computer man" style="width:100px;height:100px;">
 <!-- Content -->
 <div style="max-width:1200px">
-  <embed src="NriApplyOnline.pdf" type="application/pdf"   height="700px" width="500">
+
+ 
 
   <div class="w3-content" style="max-width:1000px">
+      <iframe src="/NriApplyOnline.pdf"
+    style="width:600px; height:500px;" frameborder="0">
+</iframe>
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-black">	
 Splunk</span></h5>
 
