--- a/index.html
+++ b/index.html
@@ -143,7 +143,11 @@ body, html {
     <a href="#about">About</a>
     <a href="#contact">Contact Us</a>
   </div>
-
+<!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7226022&style=0008&nbdigits=1&type=page&initCount=0" title="User Stats" Alt="PHP Hits Count"   border="0" >
+</a>                                    
+                  
 
 <!-- Header with image -->
 <header class="bgimg w3-display-container w3-grayscale-min" id="Home">
