--- a/index.html
+++ b/index.html
@@ -144,9 +144,7 @@ body, html {
     <a href="#contact">Contact Us</a>
   </div>
 <!-- hitwebcounter Code START -->
-<a href="https://www.hitwebcounter.com" target="_blank">
-<img src="https://hitwebcounter.com/counter/counter.php?page=7226022&style=0008&nbdigits=1&type=page&initCount=0" title="User Stats" Alt="PHP Hits Count"   border="0" >
-</a>                                    
+                               
                   
 
 <!-- Header with image -->
@@ -209,7 +207,10 @@ body, html {
   </body>
   </div>
 </div>
-
+<!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7226023&style=0008&nbdigits=1&type=page&initCount=0" title="User Stats" Alt="PHP Hits Count"   border="0" >
+</a>        
 <!-- End page content -->
 </div>
 
