--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@ body, html {
     <marquee behavior="scroll" bgcolor="#d9d9ff" direction="left">"The Linux philosophy is 'Laugh in the face of danger'. Oops. Wrong One. 'Do it yourself'. Yes, that's it". ~ Linus Torvalds</marquee>   
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
+    <h5><span class="w3-code w3-red">views</span></h5>
     <marquee behavior="scroll" bgcolor="#d9d9ff" direction="left">Email me if you want any particular topic.</marquee>
   </div>
 </header>
