--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@ body, html {
 </div>
 <!-- hitwebcounter Code START -->
 <a href="https://www.hitwebcounter.com" target="_blank">
+<h5><span class="w3-code w3-red">views</span></h5>                                                                   
 <img src="https://hitwebcounter.com/counter/counter.php?page=7226025&style=0003&nbdigits=1&type=page&initCount=0" title="User Stats" Alt="PHP Hits Count"   border="0" >
 </a>                                    
                     
