--- a/Analyzebottlenecks/index.html
+++ b/Analyzebottlenecks/index.html
@@ -187,6 +187,12 @@ performance.<b></p>
   </body>
   </div>
 </div>
+  
+  <!-- hitwebcounter Code START -->
+<h5><span class="w3-code w3-red">views</span></h5> 
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7226025&style=0003&nbdigits=1&type=page&initCount=0" title="User Stats" Alt="PHP Hits Count"   border="0" >
+</a> 
 
 <!-- End page content -->
 </div>
