--- a/index.html
+++ b/index.html
@@ -129,6 +129,15 @@ body, html {
       <a href="https://linuxhero.tk/kubernetescommmand/">Kubernetes Commands</a>
     </div>
   </div>
+   <div class="dropdown">
+    <button class="dropbtn">Devops Projects
+       <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="http://linuxhero.tk/devopsproject1/">Linux Automation using devops tools</a>
+ 
+    </div>
+  </div>
   <div class="dropdown">
     <button class="dropbtn">Monitoring Tools 
        <i class="fa fa-caret-down"></i>
