--- a/devopsproject1/index.html
+++ b/devopsproject1/index.html
@@ -144,7 +144,7 @@ body, html {
 <div class="w3-sand w3-grayscale w3-large">
   <div class="w3-container">
   <div class="w3-content" style="max-width:700px">
-   <img src="/distributions.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
+    <img src="/programming.gif" alt="Computer man" style="width:100px;height:100px;">
   </div>
      
 <!-- Content -->
@@ -170,13 +170,13 @@ define time according to our requirement.)
 </span></h5>
 
 
-    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">STEP 1: Click on new item >> Provide Name >> Select Pipeline Project>>
+    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">STEP 1: Login Jenikins >> Click on new item >> Provide Name >> Select Pipeline Project>>
 Click ok</span></h5>
         <div class="w3-content" style="max-width:700px">
    <img src="/img1.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
   </div>
   <br>
-   <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">STEP 2: Mark Build periodically >>  >> Click saveProvide cron job time of executiont[change time according to your need]</span></h5>
+   <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">STEP 2: Mark Build periodically >>  >> Click saveProvide cron job time of execution [change time according to your need]</span></h5>
          <div class="w3-content" style="max-width:700px">
    <img src="/img2.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
   </div>
@@ -194,13 +194,17 @@ Click ok</span></h5>
    <img src="/img4.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
   </div>
   <br>
-  <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">STEP 5: STEP 5: Admin will receive mail notification and URL of Job.</span></h5>
+  <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">STEP 5: Admin will receive mail notification and URL of Job.</span></h5>
       <div class="w3-content" style="max-width:700px">
-   <img src="/img5.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
+   <img src="/img55.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
+  </div>
+  <br>
+     <div class="w3-content" style="max-width:700px">
+   <img src="/img66.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
   </div>
   <br>
   
-  <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">STEP 6: STEP 6: After clicking on URL >> Console output</span></h5>
+  <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">STEP 6: After clicking on URL >> Console output</span></h5>
       <div class="w3-content" style="max-width:700px">
    <img src="/img6.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
   </div>
