--- a/devopsproject1/index.html
+++ b/devopsproject1/index.html
@@ -253,7 +253,9 @@ Click ok</span></h5>
   <iframe src="/Script.pdf"
     style="width:900px; height:700px;" frameborder="0">
 </iframe>
-  
+  <br>
+    
+    <h5><span class="w3-code w3-red">Now, You are ready to automate linux by jenkins!</span></h5>
 
  
   </div>
