--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ body, html {
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">New Topics Added</span></h5>
     <li><a href="https://linuxhero.tk/kubernetesqa/">Kubernetes Interview QA</a></li>
-   
+    <li><a href="https://linuxhero.tk/devopsqa/">Devops Interview QA</a></li>
 <!-- About Container -->
 <div class="w3-container" id="about">
   <div class="w3-content" style="max-width:700px">
