--- a/devopsqa/index.html
+++ b/devopsqa/index.html
@@ -136,7 +136,7 @@ body, html {
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">Devops QA</span></h5>
   
-    <iframe src="/devopsqa.pdf"
+    <iframe src="/devopsinterviewqa.pdf"
     style="width:700px; height:1200px;" frameborder="0">
 </iframe>
     
