--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@ body, html {
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">New Topics Added</span></h5>
     <li><a href="https://linuxhero.tk/kubernetesqa/">Kubernetes Interview QA</a></li>
     <li><a href="https://linuxhero.tk/devopsqa/">Devops Interview QA</a></li>
+     <li><a href="https://linuxhero.tk/ansibledoc/">Ansible Document</a></li>
 <!-- About Container -->
 <div class="w3-container" id="about">
   <div class="w3-content" style="max-width:700px">
