--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@ body, html {
     <li><a href="https://linuxhero.tk/kubernetesqa/">Kubernetes Interview QA</a></li>
     <li><a href="https://linuxhero.tk/devopsqa/">Devops Interview QA</a></li>
      <li><a href="https://linuxhero.tk/ansibledoc/">Ansible Document</a></li>
+     <li><a href="https://linuxhero.tk/ckaexam/">Kubernetes Exam Guide</a></li>
+     <li><a href="https://linuxhero.tk/ckatips/">Kubernetes Exam Tips</a></li>
 <!-- About Container -->
 <div class="w3-container" id="about">
   <div class="w3-content" style="max-width:700px">
