--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ body, html {
     </div>
   </div>
     <a href="#Topics">New Topics</a>
-    <a href="https://linuxhero.tk/privacy">Privacy Policy</a>
+    <a href="https://linuxhero.tk/privacy/">Privacy Policy</a>
     <a href="#about">About</a>
     <a href="#contact">Contact Us</a>
   </div>
