--- a/privacy/index.html
+++ b/privacy/index.html
@@ -137,14 +137,13 @@ body, html {
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">Privacy Policy</span></h5>
   
   <br>
-  <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-black">Third-Party WebSites</span></h5>
-<p><i><b> The Site may contain links to third-party websites and applications of interest, including advertisements and external services, that are not affiliated with us. Once you have used these links to leave the Site, any information you provide to these third parties is not covered by this Privacy Policy, and we cannot guarantee the safety and privacy of your information. Before visiting and providing any information to any third-party websites, you should inform yourself of the privacy policies and practices (if any) of the third party responsible for that website, and should take those steps necessary to, in your discretion, protect the privacy of your information. We are not responsible for the content or privacy and security practices and policies of any third parties, including other sites, services or applications that may be linked to or from the Site.<b><i><p>
+  <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-red">Third-Party WebSites</span></h5>
+<p><i>The Site may contain links to third-party websites and applications of interest, including advertisements and external services, that are not affiliated with us. Once you have used these links to leave the Site, any information you provide to these third parties is not covered by this Privacy Policy, and we cannot guarantee the safety and privacy of your information. Before visiting and providing any information to any third-party websites, you should inform yourself of the privacy policies and practices (if any) of the third party responsible for that website, and should take those steps necessary to, in your discretion, protect the privacy of your information. We are not responsible for the content or privacy and security practices and policies of any third parties, including other sites, services or applications that may be linked to or from the Site.<i><p>
 <br>
 
-<h5 class="w3-center w3-padding-64"><span class="w3-tag w3-black">Contents on the Site</span></h5>
+<h5 class="w3-center w3-padding-64"><span class="w3-tag w3-red">Contents on the Site</span></h5>
 	
-<p><i><b> We will not have a responsibility to you if any troubles happens when you set the same configuration with the Site on your computer. Do with your own resposibility.
- <b><i><p>
+<p><b> We created this site to provide knowledge according to our understanding. We will not have a responsibility to you if any troubles happens when you set the same configuration with the Site on your computer. Do with your own resposibility. <i><p>
     
 </div>
 </div>
