--- a/ckaexam/index.html
+++ b/ckaexam/index.html
@@ -75,15 +75,22 @@ body, html {
 <body>
 
 <div class="navbar">
-  <a href="http://linuxhero.tk/#home">Home</a>
+  <a href="#home">Home</a>
    <div class="dropdown">
      <button class="dropbtn">Linux 
         <i class="fa fa-caret-down"></i>
      </button>
      <div class="dropdown-content">
-      <a href="http://linuxhero.tk/linuxinfo/">Linux Introduction</a>
-      <a href="http://linuxhero.tk/linuxdistros/">Linux Distributions</a>
-      <a href="#">Link 3</a>
+        <a href="https://linuxhero.tk/linuxinfo/">Linux Introduction</a>
+       <a href="https://linuxhero.tk/linuxdistros/">Linux Distributions</a>
+       <a href="https://linuxhero.tk/linuxcommands/">Linux Commands</a>
+       <a href="https://linuxhero.tk/ntp/">Configure NTP</a>
+       <a href="https://linuxhero.tk/ssh/">Configure SSH</a>
+       <a href="https://linuxhero.tk/nfs/">Configure NFS</a>
+       <a href="https://linuxhero.tk/iscsi/">Configure iSCSI Storage</a>  
+        <a href="https://linuxhero.tk/dhcp/">Configure Dnsmasq</a>
+       <a href="https://linuxhero.tk/ftp/">Configure FTP Server</a>
+       <a href="https://linuxhero.tk/lvm/">Configure LVM</a>
      </div>
     </div> 
    <div class="dropdown">
@@ -91,9 +98,11 @@ body, html {
        <i class="fa fa-caret-down"></i>
      </button>
      <div class="dropdown-content">
-      <a href="http://linuxhero.tk/webapp/">What is devops?</a>
-      <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
-      <a href="#">Link 3</a>
+      <a href="https://linuxhero.tk/Analyzebottlenecks/">Steps To Analyze Linux Performance Bottlenecks</a>
+      <a href="https://linuxhero.tk/cpubottlenecks/">CPU Bottlenecks</a>
+        <a href="https://linuxhero.tk/memorybottlenecks/">Memory Bottlenecks</a>
+       <a href="https://linuxhero.tk/diskbottlenecks/">Disk Bottlenecks</a>
+       <a href="https://linuxhero.tk/networkbottlenecsk/">Network Bottlenecks</a>
      </div>
     </div>
    <div class="dropdown">
@@ -101,9 +110,24 @@ body, html {
        <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="http://linuxhero.tk/webapp/">What is devops?</a>
-      <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
-      <a href="#">Link 3</a>
+      <a href="https://linuxhero.tk/devopsinfo/">What is Devops?</a>
+      <a href="https://linuxhero.tk/devopstools/">Devops Tools</a>
+      <a href="https://linuxhero.tk/jenkins/">Configure Jenkins</a>
+      <a href="https://linuxhero.tk/docker/">Configure Docker</a>
+      <a href="https://linuxhero.tk/kubernetes/">Configure Kubernetes</a>
+      <a href="https://linuxhero.tk/puppet/">Configure Puppet</a>
+      <a href="https://linuxhero.tk/ansible/">Configure Ansible</a>
+      <a href="https://linuxhero.tk/dockercommands/">Docker Commands</a>
+      <a href="https://linuxhero.tk/kubernetescommmand/">Kubernetes Commands</a>
+    </div>
+  </div>
+   <div class="dropdown">
+    <button class="dropbtn">Devops Projects
+       <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="http://linuxhero.tk/devopsproject1/">Linux Automation using devops tools</a>
+ 
     </div>
   </div>
   <div class="dropdown">
@@ -111,15 +135,16 @@ body, html {
        <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="http://linuxhero.tk/webapp/">What is devops?</a>
-      <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
-      <a href="#">Link 3</a>
+      <a href="https://linuxhero.tk/nagios/">Configure Nagios</a>
+      <a href="https://linuxhero.tk/splunk/"">Configure Splunk</a>
     </div>
   </div>
     <a href="http://linuxhero.tk/#Topics">New Topics</a>
+    <a href="https://linuxhero.tk/privacy/">Privacy Policy</a>
     <a href="http://linuxhero.tk/#about">About</a>
     <a href="http://linuxhero.tk/#contact">Contact Us</a>
   </div>
+
 
 <!-------------Top Menu End------------->
 
@@ -151,31 +176,26 @@ body, html {
 
 <!-- Contact/Area Container -->
  
-<div class="w3-container" id="contact">
-    <h2>Please email me if you face any issue.</h2>
-    <form action="mailto:Mdsulemanroayl23@gmail.com" method="get" enctype="text/plain">
-      <p><strong>Name: <input type="text" name="name"/></p>
-      <p><strong>Email: <input type="text" name="email"/></p>
-      <p><strong>Comments:
-        <br />
-        <textarea name="comments" rows = "12" cols = "35">Send your comments to owner.</textarea>
-        <br>
-      <p><input type="submit" name="submit" value="Send" />
-        <form action="mailto:allishah2490@gmail.com" 
-         enctype="text/plain" onsubmit="location.href='thanks.html';" >
-        <input type="reset" name="reset" value="Clear Form" />
-      </p>
-    </form>
-  </body>
-  </div>
-</div>
 
+</div>
+<!-- hitwebcounter Code START -->
+<h5><span class="w3-code w3-red">views</span></h5> 
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7226025&style=0003&nbdigits=1&type=page&initCount=0" title="User Stats" Alt="PHP Hits Count"   border="0" >
+</a>                                    
+                    
 <!-- End page content -->
 </div>
 
 <!-- Footer -->
-<footer class="w3-center w3-light-grey w3-padding-48 w3-large">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+<footer class="w3-center w3-black w3-padding-48 w3-large">
+  
+<body>
+   <div class="list-group">
+     <a class="fa fa-linkedin-square" style="font-size:48px;color:white" href="https://www.linkedin.com/in/wajid-a-9b9545139/"></a>
+    </div>
+   </body>
+  
 </footer>
 
 <script>
@@ -188,12 +208,33 @@ function openMenu(evt, menuName) {
   }
   tablinks = document.getElementsByClassName("tablink");
   for (i = 0; i < x.length; i++) {
-    tablinks[i].className = tablinks[i].className.replace(" w3-dark-grey", "");
+    tablinks[i].className = tablinks[i].className.replace(" w3-black", "");
   }
   document.getElementById(menuName).style.display = "block";
-  evt.currentTarget.firstElementChild.className += " w3-dark-grey";
+  evt.currentTarget.firstElementChild.className += " w3-black";
 }
 document.getElementById("myLink").click();
 </script>
+
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5e8ea64d69e9320caac1c190/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
+  
 </body>
 </html>
+
+
+
+
+
+
