--- a/Analyzebottlenecks/index.html
+++ b/Analyzebottlenecks/index.html
@@ -188,7 +188,7 @@ performance.<b></p>
  
 <div class="w3-container" id="contact">
     <h5><span class="w3-code w3-black">Please email me if you face any issue.</span></h5>
-    <form action="mailto:Mdsulemanroayl23@gmail.com" method="get" enctype="text/plain">
+    <form action="mailto:linuxhero123@gmail.com" method="get" enctype="text/plain">
       <p><strong>Name: <input type="text" name="name"/></p>
       <p><strong>Email: <input type="text" name="email"/></p>
       <p><strong>Comments:
